--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             <button type="submit">Sign In</button>
 
             <p class="link">
-                Don’t have an account? <a href="#">Register</a>
+                Don’t have an account? <a href="register.html">Register</a>
             </p>
         </form>
     </div>
