--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">News</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
